# read-along

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  PRODUCT.md  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature-request.md  report-bug.md
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
.impeccable/: design.json
.impeccable/critique/: 2026-06-16T12-12-05Z__web-src-routes-readerpage-tsx.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_sqlmodel_baseline.py
docs/: architecture.md  code-layout.md  frontend-guidelines.md  mvp-scope.md  product-backlog.md  prompt.md  proposal.md  sprint-plan.md  tech-design.md  testing.md
docs/adr/: 0001-preserve-local-data-when-adopting-sqlmodel.md  0002-run-database-migrations-on-application-startup.md  0003-reject-pre-completion-progress-schema.md  0004-record-time-navigation-schema-compatibility-exception.md  0005-default-local-sherpa-tts.md  0006-align-engineering-capabilities-without-toolchain-migration.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/cross-platform-tts/: plan.md  proposal.md  tasks.md
docs/frontend-experience/: plan.md  proposal.md  tasks.md
docs/model-download-resilience/: plan.md  proposal.md  tasks.md
docs/playback-modes/: plan.md  proposal.md  tasks.md
docs/playback-position-module/: plan.md  proposal.md  tasks.md
docs/playback-reliability-fixes/: plan.md  proposal.md  tasks.md
docs/read-along-mvp/: plan.md  proposal.md  tasks.md
docs/reader-page-polish/: plan.md  proposal.md  tasks.md
docs/reader-playback-session/: plan.md  proposal.md  tasks.md
docs/releases/: v0.1.0.md
docs/repository-hardening-and-architecture/: plan.md  proposal.md  tasks.md
docs/schema-policy-module/: plan.md  proposal.md  tasks.md
docs/smooth-playback-loading/: plan.md  proposal.md  tasks.md
docs/structured-body-draft-module/: plan.md  proposal.md  tasks.md
docs/time-based-playback-navigation/: plan.md  proposal.md  tasks.md
docs/zen-reading-mode/: plan.md  proposal.md  tasks.md
src/read_along/: __init__.py  api.py  browser.py  cli.py  config.py  database_schema.py  db.py  db_models.py  db_types.py  extractors.py  ids.py  importers.py  material_audio.py  material_errors.py  material_library.py  material_views.py  models.py  playback_position.py  repository.py  storage.py  tts.py
src/read_along/sources/: __init__.py  (+1 more)
tasks/: progress.md
tasks/000-project-workflow/: task-spec.md
tasks/001-reader-service-skeleton/: task-spec.md
tasks/002-read-along-rename/: task-spec.md
tasks/003-github-readiness/: task-spec.md
tasks/004-config-and-storage-paths/: task-spec.md
tasks/005-sqlite-schema-init/: task-spec.md
tasks/006-repository-baseline/: task-spec.md
tasks/007-data-model-dtos/: task-spec.md
tasks/008-stable-content-ids/: task-spec.md
tasks/009-pdf-import/: task-spec.md
tasks/010-text-structuring/: task-spec.md
tasks/011-material-library-architecture/: task-spec.md
tasks/012-chinese-developer-text/: task-spec.md
tasks/013-material-library-module/: task-spec.md
tasks/014-frontend-skeleton/: task-spec.md
tasks/015-reader-page/: task-spec.md
tasks/016-url-import/: task-spec.md
tasks/017-dedao-url-target/: task-spec.md
tasks/018-url-import-failures/: task-spec.md
tasks/019-dev-tooling-baseline/: task-spec.md
tasks/020-url-import-regression/: task-spec.md
tasks/023-sqlmodel-database-architecture/: task-spec.md
tasks/024-sqlmodel-alembic-baseline/: task-spec.md
tasks/025-historical-schema-diagnostics/: task-spec.md
tests/: test_alembic_baseline.py  test_api.py  test_browser.py  test_cli.py  test_config.py  test_database_schema.py  test_db.py  test_db_models.py  test_db_types.py  test_dedao_source.py  test_extractors.py  test_ids.py  test_importers.py  test_material_library.py  test_models.py  test_playback_position.py  test_repository.py  test_storage.py  test_tts.py  test_tts_adapters.py  test_tts_download.py  test_tts_factory.py
web/: biome.json  index.html  package-lock.json  package.json
web/smoke/: app-smoke.test.ts  playwright.config.ts
web/src/: App.tsx  api.ts  main.tsx  playbackModePreference.ts  readingPreferences.ts  styles.css
web/test/: api.test.ts  playbackMode.test.ts  readerAudioPreparation.test.ts  readerPageViewModel.test.ts  readerPlaybackSession.test.ts  readerPlaybackTimeline.test.ts  shelfPageViewModel.test.ts
(+25 files in other folders)
