[project]
name = "read-along"
version = "0.1.0"
description = "Local read-along app with synchronized text highlighting."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "uvicorn>=0.30.0",
    "websocket-client>=1.8.0",
]

[project.scripts]
read-along = "read_along.cli:app"

[dependency-groups]
dev = [
    "httpx2>=2.3.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/read_along"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
