[project]
name = "read-along"
version = "0.1.0"
description = "Local read-along app with synchronized text highlighting."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.32",
    "rich>=13.7.0",
    "scrapling[fetchers]>=0.4.1",
    "sqlmodel>=0.0.24",
    "typer>=0.12.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
read-along = "read_along.cli:app"

[dependency-groups]
dev = [
    "httpx2>=2.3.0",
    "pre-commit>=4.0.0",
    "pyrefly>=1.0.0",
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[[tool.uv.index]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/read_along"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["D100", "D104", "D107", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.format]
quote-style = "single"

[tool.pyrefly]
search-path = ["src"]
python-version = "3.12.0"
preset = "legacy"
ignore-missing-imports = ["*"]
